Implementação Twig Template Engine

--- a/_kernel/Src/components/accordion/uikit.twig
+++ b/_kernel/Src/components/accordion/uikit.twig
@@ -1,6 +1,7 @@
+<h2>Estou usando o template {{ name }}</h2>
 <ul uk-accordion>
     <li class="uk-open">
-        <a class="uk-accordion-title" href="#">Item 1</a>
+        <a class="uk-accordion-title" href="#">Item 22</a>
         <div class="uk-accordion-content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
