Atualização do Tema Kitbusca

--- a/themes/kitbusca/assets/scss/home/_banner.scss
+++ b/themes/kitbusca/assets/scss/home/_banner.scss
@@ -26,7 +26,7 @@
     & h1 {
         font-size: 40px !important;
         color: $color-light !important;
-        font-weight: 700;
+        // font-weight: 700;
     }
 
     & p {
