--- a/themes/kitbusca/inc/doctype.twig
+++ b/themes/kitbusca/inc/doctype.twig
@@ -106,6 +106,7 @@
 	?> #}
 	<script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" type="text/tailwindcss" href="{{ BASE_THEME }}assets/css/custom.css">
+    {# <link rel="stylesheet" type="text/tailwindcss" href="{{ BASE_THEME }}assets/css/taiwind.css"> #}
 	<script src="{{ BASE_THEME }}assets/js/taiwind.js"></script>
     <script src="{{ BASE_THEME }}assets/js/custom.js"></script>
 
