--- a/themes/kitbusca/routes/home/tpl/banner.twig
+++ b/themes/kitbusca/routes/home/tpl/banner.twig
@@ -1,8 +1,12 @@
-<div id="home-banner-slide" class="uk-height-large uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url({{ BASE_UPLOADS }}root/kit-busca-guia-de-empresas-e-produtos-com-ferramentas.jpg);">
+{# <div id="home-banner-slide" class="uk-height-large uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle" style="background-image: url({{ BASE_UPLOADS }}root/kit-busca-guia-de-empresas-e-produtos-com-ferramentas.jpg);"> #}
+
+<div id="home-banner-slide" class="h-full text-white text-center p-10 lg:p-20 bg-gradient-to-r from-[#260656] to-[#4c1d95]">
 	
-	<div id="home-banner">
-		<h1>Conecte-se com Empresas e Profissionais Locais</h1>
-		<p>Veja como é fácil encontrar profissionais. Busque Já! De forma gratuita, rápida e simples você busca o que precisa!</p>
+	<div id="home-banner ">
+		{# <h1 class="text-4xl lg:text-5xl mb-8 font-semibold text-white">Sua Empresa Conectada com Todos</h1> #}
+		<h1 class="text-4xl lg:text-5xl mb-8 font-semibold text-white">Conecte-se com Empresas e Profissionais</h1>
+		<h2 class="text-3xl lg:text-4xl mb-2 font-semibold text-white italic">"Aki o Cliente é kitbusca!"</h2>
+		<p class="text-xl mb-10">Veja como é fácil encontrar profissionais. Busque Já! De forma gratuita, rápida e simples você busca o que precisa!</p>
 		<div class="uk-container uk-flex uk-flex-center">
 			<div class="liloo-form-search">
 				<form autocomplete="off">	
