--- a/themes/kitbusca/assets/scss/__vars.scss
+++ b/themes/kitbusca/assets/scss/__vars.scss
@@ -1,7 +1,7 @@
 $color-light: #fff;
-$color-primary: #FFC000;
-$color-secondary: rgb(3, 71, 90, 1);
-$color-secondary-dark: rgb(1, 27, 34, 1);
+$color-primary: #42AD00;
+$color-secondary: #30006B;
+$color-secondary-dark: #1e0141;
 $color-secondary-overlay: rgba(0, 38, 49, 0.297); 
 $border-radius: 5px;
 
