--- a/themes/kitbusca/routes/home/tpl/cta.twig
+++ b/themes/kitbusca/routes/home/tpl/cta.twig
@@ -1,5 +1,5 @@
 <!-- Caracteristicas -->
-<div id="como-funciona" class="uk-container uk-text-center uk-padding">
+{# <div id="como-funciona" class="uk-container uk-text-center uk-padding">
 	<h2 style="font-size: 35px !important;">O que é e como Funciona a Busque Já?</h2>
 	<p class="uk-margin-large-bottom">
 		Somos uma plataforma de serviços, onde você pode solicitar orçamentos de qualquer lugar do Brasil.
@@ -31,7 +31,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> #}
 
 <!-- CTA -->
 <div class="liloo-cta uk-padding-large uk-light">
