Implementação das rotas do tema kitbusca

--- a/themes/kitbusca/assets/scss/home/_search.scss
+++ b/themes/kitbusca/assets/scss/home/_search.scss
@@ -2,7 +2,7 @@
     // width: 60%;
     // margin: 0 auto;
     background: $color-secondary-overlay;
-    padding: 10px;
+    // padding: 10px;
 
     
     & form{
