Update tema kitbusca

--- a/themes/kitbusca/assets/scss/_btn.scss
+++ b/themes/kitbusca/assets/scss/_btn.scss
@@ -40,6 +40,11 @@
   border-radius: 500px;
   background: #efefef;
   color: $color-secondary;
+  // & svg {
+  //   &:hover {
+  //     color: #fff !important;
+  //   }
+  // }
 }
 
 /* Tamanhos dos botões */
