--- a/themes/kitbusca/inc/copyright.twig
+++ b/themes/kitbusca/inc/copyright.twig
@@ -1,7 +1,7 @@
 <!-- Desktop -->
 <div style="background: #000;">
 	<div class="uk-container uk-padding">
-		<p style="color: #fff;">&copy; <?php echo date("Y") ?> kitbusca. Todos os direitos reservados</p>
+		<p style="color: #fff;">&copy; 2022 - {{ date }} kitbusca. Todos os direitos reservados</p>
 	</div>
 </div>
 
