--- a/themes/kitbusca/assets/css/style.css
+++ b/themes/kitbusca/assets/css/style.css
@@ -182,6 +182,7 @@ button {
 }
 .liloo-form-search {
   background: rgba(0, 38, 49, 0.297);
+  padding: 10px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
