--- a/themes/kitbusca/routes/conta/style.css
+++ b/themes/kitbusca/routes/conta/style.css
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #03475A;
+  background-color: #1b003c !important;
   flex-direction: column;
 }
 .liloo-login-sideone h3,
